FileBrowser Plugin for Editra
Author: Cody Precord
License: wxWindows

Version 0.8:

    - Syncronize path in tree with currently selected notebook page
    - Fix some translation strings

Version 0.7:

    - Syncronize icons with theme changes in Editra
    - Minor compatibility fixes
    - Menu item being improperly checked under some use cases

Version 0.6:

    - Number of Ui improvements
    - Added right click menu for performing file system operations
        - Open in Editor
        - Open with system filemanager
        - Show file in system filemanager
        - Get File Info
        - Rename File
        - New Folder
        - New File
        - Duplicate File
        - Create compressed zip archive of file/folder
        - Move to Trash/Recycle Bin
    - Rename files by clicking on lables
    - Fixed bug in behavior of opening files and navigating directories

Version 0.5:

    - Fix bug with opening files on gtk

Version 0.4:

    - Bug Fixes
    - New button for bookmark menu

Version 0.3:

    - Bug Fixes

Version 0.2:

    - Bug Fixes

Version 0.1:

    - Initial Release